--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenue sur ma Page HEROKI</h1>
+    <h1>Salut COmment allez vous</h1>
 </body>
 </html>
